<resources>
    <string name="app_name">GMS</string>

    <string name="login_str_description">Description Description Description...</string>

    <string name="title_activity_register">Register</string>
    <string name="register_str_secret_question">Select a secret question</string>

    <string name="feedback_str_yes">Yes</string>
    <string name="feedback_str_maybe">Maybe</string>
    <string name="feedback_str_no">No</string>

    <string name="feedback_str_question1">Question 1</string>
    <string name="feedback_str_question2">Question 2</string>
    <string name="feedback_str_question3">Question 3</string>
    <string name="feedback_str_question4">Question 4</string>
    <string name="feedback_str_question5">Question 5</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_single_view">Media Viewer</string>

    <string name="title_daily_summary">Daily Summary</string>
    <string name="title_recently_upload">Images</string>
    <string name="title_heat_map">Heat Map</string>
    <string name="title_hot_spots">Hot Spots</string>
    <string name="title_around_you">Around You</string>
    <string name="title_feedback">Feedback</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyDFQb-yV3wx78n9PYWFcJpx3TLTg8kuXgM
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
