<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4">

        <TextView
            android:id="@+id/feedback_textview_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/feedback_str_question1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <RadioGroup
            android:id="@+id/feedback_rgrp_question1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_textview_question1"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/feedback_radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/feedback_str_yes"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dp"
                android:text="@string/feedback_str_maybe"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="85dp"
                android:text="@string/feedback_str_no"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/feedback_textview_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_rgrp_question1"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback_str_question2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <RadioGroup
            android:id="@+id/feedback_rgrp_question2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_textview_question2"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/feedback_radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/feedback_str_yes"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dp"
                android:text="@string/feedback_str_maybe"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="85dp"
                android:text="@string/feedback_str_no"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/feedback_textview_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_rgrp_question2"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback_str_question3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <RadioGroup
            android:id="@+id/feedback_rgrp_question3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_textview_question3"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/feedback_radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/feedback_str_yes"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dp"
                android:text="@string/feedback_str_maybe"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="85dp"
                android:text="@string/feedback_str_no"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/feedback_textview_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_rgrp_question3"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback_str_question4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <RadioGroup
            android:id="@+id/feedback_rgrp_question4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_textview_question4"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/feedback_radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/feedback_str_yes"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dp"
                android:text="@string/feedback_str_maybe"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="85dp"
                android:text="@string/feedback_str_no"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/feedback_textview_question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_rgrp_question4"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback_str_question5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp" />

        <RadioGroup
            android:id="@+id/feedback_rgrp_question5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback_textview_question5"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/feedback_radioButton13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/feedback_str_yes"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dp"
                android:text="@string/feedback_str_maybe"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/feedback_radioButton15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="85dp"
                android:text="@string/feedback_str_no"
                android:layout_weight="1" />


        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/feedback_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Submit Feedback"
        android:layout_gravity="center" />

</LinearLayout>